--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,1 +1,3 @@
 booking.property=Product Profile Dev
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017
+spring.data.mongodb.database=productdb
