--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,4 +1,4 @@
 booking.property=Product Profile Dev
 spring.data.mongodb.uri=mongodb://root:root@localhost:27017
 spring.data.mongodb.database=productdb
-app.testProp=Property of Test Updated
+app.testProp=Property of Test Updated 2
